--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ targetCompatibility = '11' // -target
 mainClassName = 'BurpExtensionCommons.Main'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 tasks.withType(JavaCompile) {
