--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 netbeans.org-netbeans-modules-javascript2-requirejs.enabled=true
-release_version_major=0.4
-release_version_minor=12.2
+release_version_major=0.5
+release_version_minor=0.0
