--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 netbeans.org-netbeans-modules-javascript2-requirejs.enabled=true
 release_version_major=3.1
 release_version_minor=3.1
+netbeans.hint.jdkPlatform=JDK_17
