--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'  
 }
 
 sourceCompatibility = '17' // -source
@@ -25,8 +26,13 @@ clean.doFirst {
 }
 
 jar {
-    destinationDirectory = file('release')
-    archiveVersion =  "v${release_version_major}.${release_version_minor}"
+  destinationDirectory = file('release')
+   archiveVersion =  "v${release_version_major}.${release_version_minor}"
+}
+
+shadowJar {
+   destinationDirectory = file('release')
+   archiveVersion =  "v${release_version_major}.${release_version_minor}"
 }
 
 task release(type: Zip, dependsOn: ['build']) {
@@ -46,7 +52,7 @@ task release(type: Zip, dependsOn: ['build']) {
 dependencies {
 
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
-    implementation 'net.portswigger.burp.extensions:montoya-api:2023.12.1'
+    compileOnly 'net.portswigger.burp.extensions:montoya-api:2023.12.1'
         // https://mvnrepository.com/artifact/com.google.code.gson/gson
         implementation 'com.google.code.gson:gson:2.10.1'
         // https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
