parse IP Addres

--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,17 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'  
 }
 
-sourceCompatibility = '17' // -source
-targetCompatibility = '17' // -target
+// Apply a specific Java toolchain to ease working on different environments.
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
-mainClassName = 'BurpExtensionCommons.Main'
+application {
+    // Define the main class for the application.
+    mainClass = 'BurpExtensionCommons.Main'
+}
 
 repositories {
     mavenCentral()
@@ -54,10 +61,9 @@ dependencies {
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
     compileOnly 'net.portswigger.burp.extensions:montoya-api:2023.12.1'
         // https://mvnrepository.com/artifact/com.google.code.gson/gson
-        implementation 'com.google.code.gson:gson:2.10.1'
+        implementation 'com.google.code.gson:gson:2.11.0'
         // https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
         implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
-
     // Unit Test
 
     // Use JUnit Jupiter for testing.
