--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,10 @@ dependencies {
         implementation 'com.google.code.gson:gson:2.11.0'
         // https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
         implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
+
+    // https://mvnrepository.com/artifact/org.brotli/dec
+    compileOnly 'org.brotli:dec:0.1.2'
+
     // Unit Test
 
     // Use JUnit Jupiter for testing.
