--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,14 @@ task release(type: Zip, dependsOn: ['build']) {
 
 dependencies {
 
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
+    compileOnly 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
+    compileOnly 'org.bouncycastle:bcprov-jdk18on:1.78.1'
+
+    // https://mvnrepository.com/artifact/org.brotli/dec
+    compileOnly 'org.brotli:dec:0.1.2'
+
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
     compileOnly 'net.portswigger.burp.extensions:montoya-api:2024.12'
         // https://mvnrepository.com/artifact/com.google.code.gson/gson
@@ -65,10 +73,13 @@ dependencies {
         // https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
         implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
 
-    // https://mvnrepository.com/artifact/org.brotli/dec
-    compileOnly 'org.brotli:dec:0.1.2'
 
     // Unit Test
+
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on
+    testImplementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
+    testImplementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
 
     // Use JUnit Jupiter for testing.
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
@@ -76,7 +87,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
 
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
-    testImplementation 'net.portswigger.burp.extensions:montoya-api:2024.11'
+    testImplementation 'net.portswigger.burp.extensions:montoya-api:2024.12'
 
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation 'org.mockito:mockito-core:5.4.0'
