--- a/build.gradle
+++ b/build.gradle
@@ -67,12 +67,13 @@ dependencies {
     compileOnly 'org.brotli:dec:0.1.2'
 
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
-    implementation 'net.portswigger.burp.extensions:montoya-api:2025.7'
+    implementation 'net.portswigger.burp.extensions:montoya-api:2025.8'
         // https://mvnrepository.com/artifact/com.google.code.gson/gson
         implementation 'com.google.code.gson:gson:2.13.1'
         // https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
         implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
-
+        // https://mvnrepository.com/artifact/com.github.albfernandez/juniversalchardet
+        // implementation 'com.github.albfernandez:juniversalchardet:2.4.0'
     // Unit Test
 
     // https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on
@@ -86,7 +87,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
 
     // https://mvnrepository.com/artifact/net.portswigger.burp.extensions/montoya-api
-    testImplementation 'net.portswigger.burp.extensions:montoya-api:2025.7'
+    testImplementation 'net.portswigger.burp.extensions:montoya-api:2025.8'
 
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation 'org.mockito:mockito-core:5.4.0'
